--- a/package.json
+++ b/package.json
@@ -23,15 +23,18 @@
     "@nivo/geo": "^0.80.0",
     "@nivo/line": "^0.80.0",
     "@nivo/pie": "^0.80.0",
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.9",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
     "formik": "^2.2.9",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-pro-sidebar": "0.7.1",
-    "typescript": "4.9.3",
+    "typescript": "^4.9.3",
     "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.2.3"
   }
 }
