--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-pro-sidebar": "0.7.1",
+    "react-pro-sidebar": "^1.0.0-alpha.9",
     "typescript": "^4.9.3",
     "yup": "^0.32.11"
   },
