--- a/package.json
+++ b/package.json
@@ -24,15 +24,19 @@
     "@nivo/geo": "^0.80.0",
     "@nivo/line": "^0.80.0",
     "@nivo/pie": "^0.80.0",
+    "@reduxjs/toolkit": "^1.9.1",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "@types/react-redux": "^7.1.24",
+    "axios": "^1.2.1",
     "cypress": "^12.0.2",
     "formik": "^2.2.9",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-pro-sidebar": "^1.0.0-alpha.9",
+    "react-redux": "^8.0.5",
     "typescript": "^4.9.3",
     "yup": "^0.32.11"
   },
