--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fullcalendar/daygrid": "^5.11.3",
     "@fullcalendar/list": "^5.11.3",
     "@fullcalendar/timegrid": "^5.11.3",
+    "@hookform/resolvers": "^2.9.10",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.16",
     "@mui/x-data-grid": "^5.17.13",
@@ -35,6 +36,7 @@
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.41.0",
     "react-pro-sidebar": "^1.0.0-alpha.9",
     "react-redux": "^8.0.5",
     "typescript": "^4.9.3",
